--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Tier 1 Summary</title>
     <!-- link the stylesheet-->
     <link href="main.css" rel="stylesheet" />
+    <!-- source in javascript file -->
+    <script src="hello.js"></script>
 </head>
 <body>
     <h1>Tier 1 Summary</h1>
